Download ROM ボタンを押したときのワーニングメッセージを修正

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     <div class="modal-header">
                         <h4 class="modal-title" id="confirmationModalLabel">WARNING</h4>
                     </div>
-                    <div class="modal-body" id="confirmationModalBody">The current logo does not match the one in the boot rom. This rom will not boot on a real Gameboy.</div>
+                    <div class="modal-body" id="confirmationModalBody">カスタムロゴ入りのＧＢデータを実機本体で起動するには専用のカートリッジが必要です。</div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger btn-lg" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-success btn-lg" data-dismiss="modal" onClick="downloadROM();">Proceed</button>
